Prevent scrollbar from repositioning the home page

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -6,6 +6,10 @@
 
 /* HOME WEB PAGE */
 
+html {
+  overflow-y: scroll; /* Prevents scrollbar from repositioning the home web page */
+}
+
 body {
   color: var(--text-color);
 }
@@ -40,7 +44,7 @@ header button {
   background-size: cover;
   background-position-y: 60%;
   display: grid;
-  grid-template-rows: min-content 1fr;
+  grid-template-rows: repeat(2, min-content);
   row-gap: 35px;
 }
 
@@ -112,6 +116,8 @@ header button {
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: 35%;
+  display: grid;
+  grid-template-rows: repeat(2, min-content);
 }
 
 #menu-items {
@@ -157,6 +163,8 @@ header button {
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: 35%;
+  display: grid;
+  grid-template-rows: repeat(2, min-content);
 }
 
 #contact-content {
